RESOLVED FIXED126566
WebKit2 EFL build fix after r161387
https://bugs.webkit.org/show_bug.cgi?id=126566
Summary WebKit2 EFL build fix after r161387
Jinwoo Song
Reported 2014-01-07 00:18:03 PST
make[2]: *** [Source/WebKit2/CMakeFiles/WebKit2.dir/WebProcess/WebCoreSupport/WebChromeClient.cpp.o] Error 1 make[2]: *** Waiting for unfinished jobs.... In file included from /usr/include/c++/4.7/memory:86:0, from /mnt/buildbot/efl-linux-slave-2/efl-linux-64-release-wk2/build/Source/WTF/wtf/StdLibExtras.h:30, from /mnt/buildbot/efl-linux-slave-2/efl-linux-64-release-wk2/build/Source/WTF/wtf/FastMalloc.h:28, from /mnt/buildbot/efl-linux-slave-2/efl-linux-64-release-wk2/build/Source/WebKit2/config.h:56, from /mnt/buildbot/efl-linux-slave-2/efl-linux-64-release-wk2/build/Source/WebKit2/UIProcess/WebPageProxy.cpp:27: /usr/include/c++/4.7/bits/unique_ptr.h: In instantiation of ‘void std::default_delete<_Tp>::operator()(_Tp*) const [with _Tp = WebKit::RemoteScrollingCoordinatorProxy]’: /usr/include/c++/4.7/bits/unique_ptr.h:173:4: required from ‘std::unique_ptr<_Tp, _Dp>::~unique_ptr() [with _Tp = WebKit::RemoteScrollingCoordinatorProxy; _Dp = std::default_delete<WebKit::RemoteScrollingCoordinatorProxy>]’ /mnt/buildbot/efl-linux-slave-2/efl-linux-64-release-wk2/build/Source/WebKit2/UIProcess/WebPageProxy.cpp:316:39: required from here /usr/include/c++/4.7/bits/unique_ptr.h:63:14: error: invalid application of ‘sizeof’ to incomplete type ‘WebKit::RemoteScrollingCoordinatorProxy’ make[2]: *** [Source/WebKit2/CMakeFiles/WebKit2.dir/UIProcess/WebPageProxy.cpp.o] Error 1 make[1]: *** [Source/WebKit2/CMakeFiles/WebKit2.dir/all] Error 2 make: *** [all] Error 2
Attachments
Patch (4.93 KB, patch)
2014-01-07 00:20 PST, Jinwoo Song
no flags
Jinwoo Song
Comment 1 2014-01-07 00:20:55 PST
WebKit Commit Bot
Comment 2 2014-01-07 01:32:52 PST
Comment on attachment 220498 [details] Patch Clearing flags on attachment: 220498 Committed r161413: <http://trac.webkit.org/changeset/161413>
WebKit Commit Bot
Comment 3 2014-01-07 01:32:55 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.