WebKit2 EFL build fix after r161387 https://bugs.webkit.org/show_bug.cgi?id=126566

Reviewed by Andreas Kling.

Add missing ASYNC_SCROLLING macro.

* UIProcess/WebPageProxy.h:
* WebProcess/WebCoreSupport/WebChromeClient.cpp:
* WebProcess/WebCoreSupport/WebChromeClient.h:
* WebProcess/WebPage/WebPage.cpp:
* WebProcess/WebPage/WebPage.h:


Canonical link: https://commits.webkit.org/144462@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@161413 268f45cc-cd09-0410-ab3c-d52691b4dbfc